--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,32 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Binggrae";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae.woff")
+    format("woff");
+}
+
 @theme {
   --breakpoint-md: 767px;
   --breakpoint-lg: 1240px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family:
+    "Binggrae",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
